--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -4,10 +4,10 @@ one:
   name: MyString
   description: MyString
   unit_price: 1
-  merchange_id: 1
+  merchant_id: 1
 
 two:
   name: MyString
   description: MyString
   unit_price: 1
-  merchange_id: 1
+  merchant_id: 1
